--- a/src/app/components/turnos/turnos.component.html
+++ b/src/app/components/turnos/turnos.component.html
@@ -22,6 +22,8 @@
   <app-calendar-header [(view)]="view" [(viewDate)]="viewDate" [locale]="locale"></app-calendar-header>
 </div>
 
+<strong *ngIf="clickedDate">Día seleccionado: {{dia}} </strong>
+
 <div *ngIf="show">
   <table class="table">
     <thead>
@@ -34,7 +36,7 @@
       <tr>
         <td><strong>{{hs.hs}}</strong></td>
         <td>
-          <button class="btn btn-success">Agendar</button>
+          <button class="btn btn-success" (click)="agendar(hs.id, clickedDate)">Agendar</button>
         </td>
       </tr>
     </tbody>
