--- a/src/app/utils/alert/alert.html
+++ b/src/app/utils/alert/alert.html
@@ -1,7 +1,7 @@
 <div class="modal fade show" style="display: block">
     <div class="modal-dialog modal-dialog-centered">
         <div class="modal-content">
-            <div class="modal-header>
+            <div class="modal-header">
                 <h5 class=" modal-tittle">Turno</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" arial-label="Close"></button>
             </div>
