--- a/src/app/components/registro/registro.component.html
+++ b/src/app/components/registro/registro.component.html
@@ -24,13 +24,15 @@
                             <input type="text" class="form-control" placeholder="Telefono de Contacto" [(ngModel)]="tel"  formControlName="tel">
                         </div>
                         <label class="form-label">Fecha de Nacimiento:</label>
-                        <div class="form-group">
-                            <div class="input-group mb-3">
-                                <input type="text" class="form-control" placeholder="dd" [(ngModel)]="dia"  formControlName="dia">
-                                <input type="text" class="form-control" placeholder="mm" [(ngModel)]="mes"  formControlName="mes">
-                                <input type="text" class="form-control" placeholder="yyyy" [(ngModel)]="ano"  formControlName="ano">
-                            </div>
+                        <div class="form-group align-items-center">
+                            <mat-form-field class="example-full-width" appearance="fill">
+                                <mat-label>Presione el calendario</mat-label>
+                                <input matInput [matDatepicker]="picker" formControlName="fecha" [(ngModel)]="fecha">
+                                <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+                                <mat-datepicker touchUi #picker ></mat-datepicker>
+                            </mat-form-field>
                         </div>
+                        
                         <div class="d-flex justify-content-center">
                             <button class="btn btn-primary" [disabled]="regForm.invalid">Registrarse</button>
                         </div>
