creado carousel, navbar, footer, servicio para cambio de pwd

--- a/src/app/components/carousel/carousel.component.html
+++ b/src/app/components/carousel/carousel.component.html
@@ -1,12 +1,11 @@
-<swiper class="swiper" [config]="config">
-    <div class="swiper-wrapper test">
-        <div class="swiper-slide" *ngFor="let i of img">
-            <img [src]="i">
-            <div class="caption">
-                <p>{{i}}</p>
-            </div>
-      </div>
-    </div>
-    <div class="swiper-button-next"></div>
-    <div class="swiper-button-prev"></div>
-  </swiper>
+<div>
+    <gallery 
+    class="custom"
+    [items]="img" 
+    [autoPlay]="true" 
+    [playerInterval]="3000" 
+    [thumb]="false" 
+    [counter]="false"
+    [nav]="false"
+    ></gallery>
+</div>
