--- a/src/app/components/footer/footer/footer.component.html
+++ b/src/app/components/footer/footer/footer.component.html
@@ -1,6 +1,9 @@
 <footer>
-    <div class="d-flex justify-content-center">
-        <span class="align-center">Desarrollado por <span id="autor">Elias Franco</span></span>
-        <a href="https://www.linkedin.com/in/eliaassf/" target="_blank"><img src="./assets/img/linkedin.jpg" alt=""></a>
+    <div class="position-absolute bottom-0 start-50 translate-middle-x">
+        <div class="d-flex justify-content-center">
+            <span class="align-center">Desarrollado por <span id="autor">Elias Franco</span></span>
+            <a href="https://www.linkedin.com/in/eliaassf/" target="_blank"><img src="./assets/img/linkedin.jpg"
+                    alt=""></a>
+        </div>
     </div>
 </footer>
