--- a/src/app/components/login/login.component.css
+++ b/src/app/components/login/login.component.css
@@ -24,3 +24,29 @@ h4{
 label{
     padding-top: 20px;
 }
+
+#registrarse{
+    text-decoration: none;
+}
+
+#recordar{
+    font-size: 16px;
+    color: #0d6efd;
+    text-decoration: underline;
+
+}
+
+#recordar:hover{
+    color: #0a60e0;
+    cursor: pointer;
+}
+
+#backLogin{
+    color: black;
+    text-decoration: none;
+}
+
+#backLogin:hover{
+    font-size: 20px;
+    font-weight: bold;
+}
