--- a/src/app/components/navbar/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar/navbar.component.html
@@ -2,13 +2,16 @@
     <nav class="navbar navbar-light justify-content-end" style="background-color: #e3f2fd">
         <ul class="nav">
             <li class="nav-item">
-                <a href="#" class="nav-link">Inicio</a>
+                <a [routerLink]="['/']" routerLinkActive="router-link-active"  class="nav-link">Inicio</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Contacto</a>
+                <a [routerLink]="['/login']" routerLinkActive="router-link-active"  class="nav-link">Turnos</a>
             </li>
             <li class="nav-item">
-                <a href="#" class="nav-link">Ubicación</a>
+                <a [routerLink]="['/registro']" routerLinkActive="router-link-active"  class="nav-link">Contacto</a>
+            </li>
+            <li class="nav-item">
+                <a [routerLink]="['/ubicacion']" class="nav-link">Ubicación</a>
             </li>
         </ul>
     </nav>
