--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -1,8 +1,9 @@
 <app-navbar></app-navbar>
 
-<div class="container">
-    <div class="abs-center">
-        <img src="./assets/img/logo.jpg" alt="">
+    <div class="center">
+        <img src="./assets/img/logo.jpg">
+    </div>
+    <div class="center">
         <form #f="ngForm" (ngSubmit)="onLogin()" novalidate *ngIf="login">
             <div class="card">
                 <h4 class="card-header">ingreso</h4>
@@ -54,4 +55,3 @@
             </div>
         </form>
     </div>
-</div>
