--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
 /* You can add global styles to this file, and also import other style files */
+
 @import "../node_modules/angular-calendar/css/angular-calendar.css";
 body {
     font-family: Roboto, "Helvetica Neue", sans-serif; 
+    background-color: white;
+    min-height: 100vh;
 }
 
 .mat-simple-snackbar{
@@ -52,5 +55,24 @@ body {
     background-color: rgb(19, 86, 230);
     color: white;
 }
+
+.cortina{
+    background: khaki;
+    min-height: 100vh;
+}
+
+.fondo{
+    background-color: white;
+}
+
+.cierre{
+    background-color: khaki;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    transition: 2s;
+    transform: translateY(-100%);
+}
+   
 
 
